--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ai-sdk/google": "^1.2.19",
+    "@mastra/core": "^0.10.8",
+    "@mastra/memory": "^0.11.0",
+    "@mastra/mongodb": "^0.12.0",
+    "ai": "^4.3.16",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
