--- a/server/package.json
+++ b/server/package.json
@@ -28,7 +28,8 @@
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
     "redis": "^4.7.1",
-    "validator": "^13.15.0"
+    "validator": "^13.15.0",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
