--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "zod": "^3.25.67"
   },
   "devDependencies": {
+    "@mastra/mcp-docs-server": "^0.13.2",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.19",
@@ -39,7 +40,9 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.14.1",
     "@types/validator": "^13.15.0",
+    "fast-xml-parser": "^4.2.5",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "xmlbuilder": "^15.1.1"
   }
 }
