--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "ai": "^4.3.16",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
